--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "handlebars": "^4.1.2",
     "jquery": "^3.4.0",
+    "pc-bootstrap4-datetimepicker": "^4.17.50",
     "popper.js": "^1.15.0"
   }
 }
