--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "handlebars": "^4.1.2",
     "jquery": "^3.4.0",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "pretty-checkbox": "^3.0.3"
   }
 }
