--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-validator": "^5.3.1",
     "handlebars": "^4.1.2",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
