--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-handlebars-paginate": "^1.0.3",
     "handlebars": "^4.1.2",
     "jquery": "^3.4.0",
+    "pg": "^7.11.0",
     "popper.js": "^1.15.0",
-    "pretty-checkbox": "^3.0.3"
+    "pretty-checkbox": "^3.0.3",
+    "sequelize": "^5.8.7",
+    "sequelize-cli": "^5.4.0"
   },
   "devDependencies": {
     "ws": "3.3.2"
