--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "handlebars": "^4.1.2",
     "jquery": "^3.4.0",
     "pg": "^7.11.0",
+    "pg-hstore": "^2.3.3",
     "popper.js": "^1.15.0",
     "pretty-checkbox": "^3.0.3",
-    "sequelize": "^5.8.7",
-    "sequelize-cli": "^5.4.0"
+    "sequelize": "^5.8.9",
+    "sequelize-cli": "^5.5.0"
   },
   "devDependencies": {
     "ws": "3.3.2"
