--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^5.3.1",
     "handlebars": "^4.1.2",
     "jquery": "^3.4.0",
+    "paypal-rest-sdk": "^1.8.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "popper.js": "^1.15.0",
