--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "express-handlebars-paginate": "^1.0.3",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
+    "fs": "0.0.1-security",
     "handlebars": "^4.1.2",
     "jquery": "^3.4.0",
     "method-override": "^3.0.0",
+    "multer": "^1.4.1",
+    "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "popper.js": "^1.15.0",
     "pretty-checkbox": "^3.0.3",
     "sequelize": "^5.8.9",
-    "sequelize-cli": "^5.5.0"
+    "sequelize-cli": "^5.5.0",
+    "sharp": "^0.22.1"
   },
   "devDependencies": {
     "ws": "3.3.2"
