--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-handlebars-paginate": "^1.0.3",
@@ -24,6 +25,7 @@
     "jquery": "^3.4.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.1",
+    "nodemailer": "^6.2.1",
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
     "pg": "^7.11.0",
