passport fb and google

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.1",
     "nodemailer": "^6.2.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
     "pg": "^7.11.0",
