--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.4.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.1",
+    "node-excel-export": "^1.4.4",
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
